--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <!-- viewpotの設定  -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>9章課題</title>
+  <!-- 自作のcssファイル読み込み -->
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
 </head>
 <body>
+
+<!-- main -->
+
   <main class="clearfix">
     <div class="step-box">
       <div class="step-img1"></div>
